--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <property name="java-output-path" value="/egov-shinsookjeong/build/classes"/>
-        <property name="context-root" value="sht_webapp"/>
+        <property name="context-root" value="/"/>
     </wb-module>
 </project-modules>
